# YAODAQ

./: .clang-format  .cmake-format.py  .cmake-format.yml  .codespellignore  .editorconfig  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile.am  Makefile.in  Options.cmake  README  README.md  ReleaseNotes  Settings.cmake  _actions_8hpp_source.html  _board_8hpp_source.html  _board_infos_8hpp_source.html  _classes_8hpp_source.html  _clients_8hpp_source.html  _configuration_loader_8hpp_source.html  _configurator_8hpp_source.html  _connector_8hpp_source.html  _connector_factory_8hpp_source.html  _connector_infos_8hpp_source.html  _controller_8hpp_source.html  _dump_connector_8hpp_source.html  _exception_8hpp_source.html  _file_8hpp_source.html  _file_writter_8hpp_source.html  _general_parameters_8hpp_source.html  _identifier_8hpp_source.html  _infos_8hpp_source.html  _internal_8hpp_source.html  _interrupt_8hpp_source.html  _list_8hpp_source.html  _log_levels_8hpp_source.html  _logger_8hpp_source.html  (+106 more)
Analysis/: Analysis.cpp  CMakeLists.txt
apps/: Analysis.cpp  CMakeLists.txt  Conf.cpp  Configurator.cpp  Controller.cpp  DumpModule.cpp  Iseg.cpp  Logger.cpp  Mpod.cpp  PluginTest.cpp  WaveDump.cpp  WebSocketServer.cpp  WebsocketServer.cpp  server.cpp
apps/DAQ/: Analysis.cpp  Analysis2.cpp  CMakeLists.txt  DAQFileWritter.cpp  Digitizer.cpp  TemplateAnalysis.cpp  Viewer.cpp
apps/DAQ/include/: Channel.hpp  ChannelLinkDef.hpp  DAQFile.hpp  Event.hpp  EventLinkDef.hpp  LinkDef.hpp
apps/DAQ/src/: Channel.cpp  DAQFile.cpp  Event.cpp
apps/supress/: Config.hpp  Data.hpp  Digitizer.hpp  EventLinkDef.hpp  FileManager.cpp  FileManager.hpp  Plotter.hpp  WDconfig.cpp  WebServer.cpp  WebServer.hpp  X742CorrectionRoutines.cpp  flash.cpp  spi.hpp
extras/: CMakeLists.txt
extras/CAEN/: CMakeLists.txt
extras/CAEN/include/: CAENCommBoard.hpp  CAENCommException.hpp  CAENDPPException.hpp  CAENDigitizerBoard.hpp  CAENDigitizerConnector.hpp  CAENDigitizerException.hpp  CAENFlashException.hpp  CAENHVConnector.hpp  CAENHVError.hpp  CAENHVException.hpp  CAENVMEBoard.hpp  CAENVMEConnector.hpp  CAENVMEError.hpp  CAENVMEException.hpp  Flash.hpp  SPI.hpp
extras/CAEN/src/: CAENBoards.cpp  CAENCommBoard.cpp  CAENCommException.cpp  CAENDPPException.cpp  CAENDigitizerBoard.cpp  CAENDigitizerConnector.cpp  CAENDigitizerException.cpp  CAENFlashException.cpp  CAENHVConnector.cpp  CAENHVError.cpp  CAENHVException.cpp  CAENVMEBoard.cpp  CAENVMEConnector.cpp  CAENVMEException.cpp  Flash.cpp  SPI.cpp
extras/CAEN/tests/: CAENErrors.cpp  CMakeLists.txt
extras/Iseg/: CMakeLists.txt
extras/Iseg/include/: NHSBoard.hpp
extras/LCIO/: CMakeLists.txt
extras/ROOT/: CMakeLists.txt
extras/SNMP/: CMakeLists.txt
extras/Serial/: CMakeLists.txt
extras/WIENER/: CMakeLists.txt
extras/WebServer/: CMakeLists.txt
libs/: CMakeLists.txt  PluginRegistry.hpp
libs/include/: Board.hpp  BoardInfos.hpp  Configuration.hpp  ConfigurationLoader.hpp  Configurator.hpp  Connector.hpp  ConnectorFactory.hpp  ConnectorInfos.hpp  Controller.hpp  Data.hpp  Digitizer.hpp  Exception.hpp  File.hpp  FileManager.hpp  FileWritter.hpp  GeneralParameters.hpp  Infos.hpp  Internal.hpp  Interrupt.hpp  Key.hpp  Logger.hpp  LoggerSink.hpp  Message.hpp  Module.hpp  PlatformDefs.hpp  Plotter.hpp  PluginLoader.hpp  PluginRegistry.hpp  SourceLocation.hpp  StatusCode.hpp  SupressWarnings.hpp  Warnings.hpp  WebServer.hpp  WebsocketClient.hpp  WebsocketServer.hpp  X742CorrectionRoutines.hpp  flash.hpp  util.h
libs/src/: Board.cpp  BoardInfos.cpp  Configuration.cpp  Configurator.cpp  Connector.cpp  ConnectorFactory.cpp  ConnectorInfos.cpp  Controller.cpp  Digitizer.cpp  Exception.cpp  File.cpp  FileManager.cpp  FileWritter.cpp  GeneralParameters.cpp  Infos.cpp  Interrupt.cpp  Key.cpp  Logger.cpp  Message.cpp  Module.cpp  PlatformDefs.cpp  Plotter.cpp  PluginLoader.cpp  PluginProto.cpp.in  ProgramInfos.hpp.in  SourceLocation.cpp  WebServer.cpp  WebsocketClient.cpp  WebsocketServer.cpp  X742CorrectionRoutines.cpp  flash.cpp
source/: CMakeLists.txt
source/CAEN/: CMakeLists.txt
source/include/: .Info.hpp.kate-swp  Board.hpp  BoardInfos.hpp  Channel.hpp  ChannelLinkDef.hpp  Config.hpp  Configuration.hpp  Configurator.hpp  ConnectionState.hpp  Connector.hpp  ConnectorFactory.hpp  ConnectorInfos.hpp  Controller.hpp  Data.hpp  Digitizer.hpp  Error.hpp  Event.hpp  EventLinkDef.hpp  FileManager.hpp  Info.hpp  Infos.hpp  Interrupt.hpp  LinkDef.hpp  Log.hpp  Logger.hpp  LoggerSink.hpp  Message.hpp  Module.hpp  Plotter.hpp  ProgramInfos.hpp.in  SHA512.hpp  Status.hpp  SupressWarnings.hpp  WDconfig.hpp  WebServer.hpp  WebsocketClient.hpp  WebsocketServer.hpp  X742CorrectionRoutines.hpp  flash.hpp  flash_opcodes.hpp  (+2 more)
source/src/: Board.cpp  BoardInfos.cpp  Configuration.cpp  Configurator.cpp  ConnectionState.cpp  Connector.cpp  ConnectorFactory.cpp  ConnectorInfos.cpp  Controller.cpp  Digitizer.cpp  Error.cpp  FileManager.cpp  Info.cpp  Infos.cpp  Log.cpp  Logger.cpp  Message.cpp  Module.cpp  Plotter.cpp  Status.cpp  WDconfig.cpp  WaveDump.cpp  WebServer.cpp  WebsocketClient.cpp  WebsocketServer.cpp  X742CorrectionRoutines.cpp  flash.cpp  spi.cpp
src/: Board.cpp  BoardInfos.cpp  CMakeLists.txt  Channel.cpp  Clients.cpp  ConfigurationLoader.cpp  Configurator.cpp  Connector.cpp  ConnectorFactory.cpp  ConnectorInfos.cpp  Controller.cpp  Digitizer.cpp  DumpConnector.cpp  Event.cpp  Exception.cpp  File.cpp  FileManager.cpp  FileWritter.cpp  GeneralParameters.cpp  GeneralParameters.cpp.in  ISEG_FAST_TO_REMOVE.cpp  Identifier.cpp  Infos.cpp  Interrupt.cpp  Key.cpp  Logger.cpp  LoggerHandler.cpp  Makefile.am  Makefile.in  Message.cpp  Message2.cpp  MessageHandler.cpp  MessageHandlerClient.cpp  MessageHandlerServer.cpp  Module.cpp  Plotter.cpp  ProgramInfos.hpp.in  SourceLocation.cpp  WDconfig.c  WDconfig.cpp  (+13 more)
tests/: CAENErrors.cpp  CMakeLists.txt  Exceptions.cpp  FileWritter.cpp  FileWritter.test.cpp  GeneralParameters.test.cpp  Message2.test.cpp  MessageHandler.test.cpp  Messages.test.cpp  Utilities.test.cpp
tests/configs/: .env
(+197 files in other folders)
