include(CLI11)

if(BUILD_WEBSOCKETSERVER)
  add_executable(WebSocketServer WebsocketServer.cpp)
  add_dependencies(WebSocketServer WebsocketServer CLI11)
  target_link_libraries(WebSocketServer PRIVATE WebsocketServer PRIVATE CLI11 PRIVATE Interrupt)
  install(TARGETS WebSocketServer RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX})
endif()

if(BUILD_CONTROLLER)
  add_executable(AppController Controller.cpp)
  add_dependencies(AppController Controller CLI11)
  target_link_libraries(AppController PRIVATE Controller PRIVATE CLI11 PRIVATE Interrupt)
  set_target_properties(AppController PROPERTIES OUTPUT_NAME Controller)
  install(TARGETS AppController RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX})
endif()

if(BUILD_LOGGER)
  add_executable(AppLogger Logger.cpp)
  add_dependencies(AppLogger Logger CLI11)
  target_link_libraries(AppLogger PRIVATE Logger PRIVATE CLI11 PRIVATE Interrupt)
  set_target_properties(AppLogger PROPERTIES OUTPUT_NAME Logger)
  install(TARGETS AppLogger RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX})
endif()

if(BUILD_CONFIGURATOR)
  # add_executable(Configurator Configurator.cpp) add_dependencies(Configurator Configurator_) target_link_libraries(Configurator PUBLIC Configurator_) install(TARGETS Configurator RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX})
endif()

if(BUILD_DAQ)
  add_subdirectory(DAQ)
endif()
