include(CLI11)

if(BUILD_WEBSOCKETSERVER)
  add_executable(WebSocketServerApp WebSocketServer.cpp)
  target_link_libraries(WebSocketServerApp PRIVATE WebSocketServer PRIVATE CLI11 PRIVATE ProgramInfos PUBLIC GeneralParameters)
  set_target_properties(WebSocketServerApp PROPERTIES OUTPUT_NAME WebSocketServer)
  install(TARGETS WebSocketServerApp)
endif()

if(BUILD_CONTROLLER)
  add_executable(ControllerApp Controller.cpp)
  target_link_libraries(ControllerApp PRIVATE Controller PRIVATE CLI11 PRIVATE ProgramInfos PUBLIC GeneralParameters)
  set_target_properties(ControllerApp PROPERTIES OUTPUT_NAME Controller)
  install(TARGETS ControllerApp)
endif()

if(BUILD_LOGGER)
  add_executable(LoggerApp Logger.cpp)
  target_link_libraries(LoggerApp PRIVATE Logger PRIVATE CLI11 PRIVATE ProgramInfos PUBLIC GeneralParameters)
  set_target_properties(LoggerApp PROPERTIES OUTPUT_NAME Logger)
  install(TARGETS LoggerApp)
endif()

if(BUILD_CONFIGURATOR)
  # add_executable(Configurator Configurator.cpp) add_dependencies(Configurator Configurator_) target_link_libraries(Configurator PUBLIC Configurator_) install(TARGETS Configurator RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX})
endif()

if(BUILD_DAQ)
  add_subdirectory(DAQ)
endif()
