include(CLI11)

if(BUILD_WEBSOCKETSERVER)
  add_executable(WebSocketServerApp WebSocketServer.cpp)
  target_link_libraries(WebSocketServerApp PRIVATE WebSocketServer PRIVATE CLI11 PRIVATE ProgramInfos PUBLIC GeneralParameters)
  set_target_properties(WebSocketServerApp PROPERTIES OUTPUT_NAME WebSocketServer)
  install(TARGETS WebSocketServerApp)
endif()

if(BUILD_CONTROLLER)
  include(CppLinenoise)
  add_executable(ControllerApp Controller.cpp)
  target_link_libraries(ControllerApp PRIVATE Controller PRIVATE CLI11 PRIVATE ProgramInfos PUBLIC GeneralParameters PRIVATE linenoise)
  set_target_properties(ControllerApp PROPERTIES OUTPUT_NAME Controller)
  install(TARGETS ControllerApp)
endif()

if(BUILD_LOGGER)
  add_executable(LoggerApp Logger.cpp)
  target_link_libraries(LoggerApp PRIVATE Logger PRIVATE CLI11 PRIVATE ProgramInfos PUBLIC GeneralParameters)
  set_target_properties(LoggerApp PROPERTIES OUTPUT_NAME Logger)
  install(TARGETS LoggerApp)
endif()

if(BUILD_MPOD)
  if(UNIX)
    add_executable(MpodApp Mpod.cpp)
    target_link_libraries(MpodApp PRIVATE Mpod PRIVATE CLI11 PRIVATE ProgramInfos PUBLIC GeneralParameters)
    set_target_properties(MpodApp PROPERTIES OUTPUT_NAME Mpod)
    install(TARGETS MpodApp)
  endif()
endif()

if(BUILD_CONFIGURATOR)
  #add_executable(ConfiguratorApp Configurator.cpp)
  #target_link_libraries(ConfiguratorApp PRIVATE Configurator PRIVATE CLI11 PRIVATE ProgramInfos PUBLIC GeneralParameters)
  #set_target_properties(ConfiguratorApp PROPERTIES OUTPUT_NAME Configurator)
  #install(TARGETS ConfiguratorApp)
endif()

if(BUILD_DAQ AND NOT APPLE)
  add_subdirectory(DAQ)
endif()


add_executable(Iseg Iseg.cpp)
target_link_libraries(Iseg PRIVATE ISEG_FAST_TO_REMOVE PRIVATE CLI11 PRIVATE ProgramInfos PUBLIC GeneralParameters)
set_target_properties(Iseg PROPERTIES OUTPUT_NAME Iseg)
install(TARGETS Iseg)